src/main/antlr3/output/CMinusParser.java
// $ANTLR 3.1.2 /opt/workspace/test/parser/src/main/antlr3/CMinus.g 2009-09-16 15:43:51

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/**  Recognize and build trees for C-
 *   Results in CMinusParser.java, CMinusLexer.java,
 *   and the token definition file CMinus.tokens used by
 *   the tree grammar to ensure token types are the same.
 */
public class CMinusParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "VAR", "FUNC", "ARG", "SLIST", "ID", "INT", "WS", "';'", "'int'", "'char'", "'('", "','", "')'", "'{'", "'}'", "'for'", "'='", "'=='", "'!='", "'+'", "'*'"
    };
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int INT=9;
    public static final int ID=8;
    public static final int EOF=-1;
    public static final int T__19=19;
    public static final int WS=10;
    public static final int T__16=16;
    public static final int T__15=15;
    public static final int ARG=6;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int FUNC=5;
    public static final int SLIST=7;
    public static final int VAR=4;

    // delegates
    // delegators


        public CMinusParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CMinusParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CMinusParser.tokenNames; }
    public String getGrammarFileName() { return "/opt/workspace/test/parser/src/main/antlr3/CMinus.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:21:1: program : ( declaration )+ ;
    public final CMinusParser.program_return program() throws RecognitionException {
        CMinusParser.program_return retval = new CMinusParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        CMinusParser.declaration_return declaration1 = null;



        try {
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:22:5: ( ( declaration )+ )
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:22:9: ( declaration )+
            {
            root_0 = (Object)adaptor.nil();

            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:22:9: ( declaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=12 && LA1_0<=13)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:22:9: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_program65);
            	    declaration1=declaration();

            	    state._fsp--;

            	    adaptor.addChild(root_0, declaration1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class declaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declaration"
    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:25:1: declaration : ( variable | function );
    public final CMinusParser.declaration_return declaration() throws RecognitionException {
        CMinusParser.declaration_return retval = new CMinusParser.declaration_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        CMinusParser.variable_return variable2 = null;

        CMinusParser.function_return function3 = null;



        try {
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:26:5: ( variable | function )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=12 && LA2_0<=13)) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==ID) ) {
                    int LA2_2 = input.LA(3);

                    if ( (LA2_2==14) ) {
                        alt2=2;
                    }
                    else if ( (LA2_2==11) ) {
                        alt2=1;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:26:9: variable
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_variable_in_declaration85);
                    variable2=variable();

                    state._fsp--;

                    adaptor.addChild(root_0, variable2.getTree());

                    }
                    break;
                case 2 :
                    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:27:9: function
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_function_in_declaration95);
                    function3=function();

                    state._fsp--;

                    adaptor.addChild(root_0, function3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "declaration"

    public static class variable_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "variable"
    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:30:1: variable : type ID ';' -> ^( VAR type ID ) ;
    public final CMinusParser.variable_return variable() throws RecognitionException {
        CMinusParser.variable_return retval = new CMinusParser.variable_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID5=null;
        Token char_literal6=null;
        CMinusParser.type_return type4 = null;


        Object ID5_tree=null;
        Object char_literal6_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_11=new RewriteRuleTokenStream(adaptor,"token 11");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:31:5: ( type ID ';' -> ^( VAR type ID ) )
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:31:9: type ID ';'
            {
            pushFollow(FOLLOW_type_in_variable114);
            type4=type();

            state._fsp--;

            stream_type.add(type4.getTree());
            ID5=(Token)match(input,ID,FOLLOW_ID_in_variable116);  
            stream_ID.add(ID5);

            char_literal6=(Token)match(input,11,FOLLOW_11_in_variable118);  
            stream_11.add(char_literal6);



            // AST REWRITE
            // elements: type, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 31:21: -> ^( VAR type ID )
            {
                // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:31:24: ^( VAR type ID )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VAR, "VAR"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "variable"

    public static class type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:34:1: type : ( 'int' | 'char' );
    public final CMinusParser.type_return type() throws RecognitionException {
        CMinusParser.type_return retval = new CMinusParser.type_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set7=null;

        Object set7_tree=null;

        try {
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:34:5: ( 'int' | 'char' )
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:
            {
            root_0 = (Object)adaptor.nil();

            set7=(Token)input.LT(1);
            if ( (input.LA(1)>=12 && input.LA(1)<=13) ) {
                input.consume();
                adaptor.addChild(root_0, (Object)adaptor.create(set7));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type"

    public static class function_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function"
    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:41:1: function : type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' block -> ^( FUNC type ID ( formalParameter )* block ) ;
    public final CMinusParser.function_return function() throws RecognitionException {
        CMinusParser.function_return retval = new CMinusParser.function_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID9=null;
        Token char_literal10=null;
        Token char_literal12=null;
        Token char_literal14=null;
        CMinusParser.type_return type8 = null;

        CMinusParser.formalParameter_return formalParameter11 = null;

        CMinusParser.formalParameter_return formalParameter13 = null;

        CMinusParser.block_return block15 = null;


        Object ID9_tree=null;
        Object char_literal10_tree=null;
        Object char_literal12_tree=null;
        Object char_literal14_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_15=new RewriteRuleTokenStream(adaptor,"token 15");
        RewriteRuleTokenStream stream_16=new RewriteRuleTokenStream(adaptor,"token 16");
        RewriteRuleTokenStream stream_14=new RewriteRuleTokenStream(adaptor,"token 14");
        RewriteRuleSubtreeStream stream_formalParameter=new RewriteRuleSubtreeStream(adaptor,"rule formalParameter");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:42:5: ( type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' block -> ^( FUNC type ID ( formalParameter )* block ) )
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:42:9: type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' block
            {
            pushFollow(FOLLOW_type_in_function175);
            type8=type();

            state._fsp--;

            stream_type.add(type8.getTree());
            ID9=(Token)match(input,ID,FOLLOW_ID_in_function177);  
            stream_ID.add(ID9);

            char_literal10=(Token)match(input,14,FOLLOW_14_in_function187);  
            stream_14.add(char_literal10);

            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:43:13: ( formalParameter ( ',' formalParameter )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0>=12 && LA4_0<=13)) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:43:15: formalParameter ( ',' formalParameter )*
                    {
                    pushFollow(FOLLOW_formalParameter_in_function191);
                    formalParameter11=formalParameter();

                    state._fsp--;

                    stream_formalParameter.add(formalParameter11.getTree());
                    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:43:31: ( ',' formalParameter )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==15) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:43:32: ',' formalParameter
                    	    {
                    	    char_literal12=(Token)match(input,15,FOLLOW_15_in_function194);  
                    	    stream_15.add(char_literal12);

                    	    pushFollow(FOLLOW_formalParameter_in_function196);
                    	    formalParameter13=formalParameter();

                    	    state._fsp--;

                    	    stream_formalParameter.add(formalParameter13.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }

            char_literal14=(Token)match(input,16,FOLLOW_16_in_function204);  
            stream_16.add(char_literal14);

            pushFollow(FOLLOW_block_in_function214);
            block15=block();

            state._fsp--;

            stream_block.add(block15.getTree());


            // AST REWRITE
            // elements: formalParameter, ID, block, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 45:9: -> ^( FUNC type ID ( formalParameter )* block )
            {
                // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:45:12: ^( FUNC type ID ( formalParameter )* block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNC, "FUNC"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());
                // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:45:27: ( formalParameter )*
                while ( stream_formalParameter.hasNext() ) {
                    adaptor.addChild(root_1, stream_formalParameter.nextTree());

                }
                stream_formalParameter.reset();
                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "function"

    public static class formalParameter_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "formalParameter"
    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:48:1: formalParameter : type ID -> ^( ARG type ID ) ;
    public final CMinusParser.formalParameter_return formalParameter() throws RecognitionException {
        CMinusParser.formalParameter_return retval = new CMinusParser.formalParameter_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID17=null;
        CMinusParser.type_return type16 = null;


        Object ID17_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:49:5: ( type ID -> ^( ARG type ID ) )
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:49:9: type ID
            {
            pushFollow(FOLLOW_type_in_formalParameter256);
            type16=type();

            state._fsp--;

            stream_type.add(type16.getTree());
            ID17=(Token)match(input,ID,FOLLOW_ID_in_formalParameter258);  
            stream_ID.add(ID17);



            // AST REWRITE
            // elements: type, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 49:17: -> ^( ARG type ID )
            {
                // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:49:20: ^( ARG type ID )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ARG, "ARG"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "formalParameter"

    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:55:1: block : lc= '{' ( variable )* ( stat )* '}' -> ^( SLIST[$lc,\"SLIST\"] ( variable )* ( stat )* ) ;
    public final CMinusParser.block_return block() throws RecognitionException {
        CMinusParser.block_return retval = new CMinusParser.block_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token lc=null;
        Token char_literal20=null;
        CMinusParser.variable_return variable18 = null;

        CMinusParser.stat_return stat19 = null;


        Object lc_tree=null;
        Object char_literal20_tree=null;
        RewriteRuleTokenStream stream_17=new RewriteRuleTokenStream(adaptor,"token 17");
        RewriteRuleTokenStream stream_18=new RewriteRuleTokenStream(adaptor,"token 18");
        RewriteRuleSubtreeStream stream_variable=new RewriteRuleSubtreeStream(adaptor,"rule variable");
        RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat");
        try {
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:56:5: (lc= '{' ( variable )* ( stat )* '}' -> ^( SLIST[$lc,\"SLIST\"] ( variable )* ( stat )* ) )
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:56:9: lc= '{' ( variable )* ( stat )* '}'
            {
            lc=(Token)match(input,17,FOLLOW_17_in_block292);  
            stream_17.add(lc);

            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:56:16: ( variable )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=12 && LA5_0<=13)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:56:16: variable
            	    {
            	    pushFollow(FOLLOW_variable_in_block294);
            	    variable18=variable();

            	    state._fsp--;

            	    stream_variable.add(variable18.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:56:26: ( stat )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=ID && LA6_0<=INT)||LA6_0==11||LA6_0==14||LA6_0==17||LA6_0==19) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:56:26: stat
            	    {
            	    pushFollow(FOLLOW_stat_in_block297);
            	    stat19=stat();

            	    state._fsp--;

            	    stream_stat.add(stat19.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            char_literal20=(Token)match(input,18,FOLLOW_18_in_block300);  
            stream_18.add(char_literal20);



            // AST REWRITE
            // elements: variable, stat
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 57:9: -> ^( SLIST[$lc,\"SLIST\"] ( variable )* ( stat )* )
            {
                // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:57:12: ^( SLIST[$lc,\"SLIST\"] ( variable )* ( stat )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(SLIST, lc, "SLIST"), root_1);

                // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:57:33: ( variable )*
                while ( stream_variable.hasNext() ) {
                    adaptor.addChild(root_1, stream_variable.nextTree());

                }
                stream_variable.reset();
                // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:57:43: ( stat )*
                while ( stream_stat.hasNext() ) {
                    adaptor.addChild(root_1, stream_stat.nextTree());

                }
                stream_stat.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "block"

    public static class stat_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stat"
    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:60:1: stat : ( forStat | expr ';' | block | assignStat ';' | ';' );
    public final CMinusParser.stat_return stat() throws RecognitionException {
        CMinusParser.stat_return retval = new CMinusParser.stat_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal23=null;
        Token char_literal26=null;
        Token char_literal27=null;
        CMinusParser.forStat_return forStat21 = null;

        CMinusParser.expr_return expr22 = null;

        CMinusParser.block_return block24 = null;

        CMinusParser.assignStat_return assignStat25 = null;


        Object char_literal23_tree=null;
        Object char_literal26_tree=null;
        Object char_literal27_tree=null;

        try {
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:60:5: ( forStat | expr ';' | block | assignStat ';' | ';' )
            int alt7=5;
            switch ( input.LA(1) ) {
            case 19:
                {
                alt7=1;
                }
                break;
            case ID:
                {
                int LA7_2 = input.LA(2);

                if ( (LA7_2==20) ) {
                    alt7=4;
                }
                else if ( (LA7_2==11||(LA7_2>=21 && LA7_2<=24)) ) {
                    alt7=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 2, input);

                    throw nvae;
                }
                }
                break;
            case INT:
            case 14:
                {
                alt7=2;
                }
                break;
            case 17:
                {
                alt7=3;
                }
                break;
            case 11:
                {
                alt7=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:60:7: forStat
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_forStat_in_stat333);
                    forStat21=forStat();

                    state._fsp--;

                    adaptor.addChild(root_0, forStat21.getTree());

                    }
                    break;
                case 2 :
                    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:61:7: expr ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_expr_in_stat341);
                    expr22=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr22.getTree());
                    char_literal23=(Token)match(input,11,FOLLOW_11_in_stat343); 

                    }
                    break;
                case 3 :
                    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:62:7: block
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_block_in_stat352);
                    block24=block();

                    state._fsp--;

                    adaptor.addChild(root_0, block24.getTree());

                    }
                    break;
                case 4 :
                    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:63:7: assignStat ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_assignStat_in_stat360);
                    assignStat25=assignStat();

                    state._fsp--;

                    adaptor.addChild(root_0, assignStat25.getTree());
                    char_literal26=(Token)match(input,11,FOLLOW_11_in_stat362); 

                    }
                    break;
                case 5 :
                    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:64:7: ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal27=(Token)match(input,11,FOLLOW_11_in_stat371); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "stat"

    public static class forStat_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "forStat"
    // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:67:1: forStat : 'for' '(' first= assignStat ';' expr ';' inc= assignStat ')' block -> ^( 'for' $first expr $inc block ) ;
    public final CMinusParser.forStat_return forStat() throws RecognitionException {
        CMinusParser.forStat_return retval = new CMinusParser.forStat_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal28=null;
        Token char_literal29=null;
        Token char_literal30=null;
        Token char_literal32=null;
        Token char_literal33=null;
        CMinusParser.assignStat_return first = null;

        CMinusParser.assignStat_return inc = null;

        CMinusParser.expr_return expr31 = null;

        CMinusParser.block_return block34 = null;


        Object string_literal28_tree=null;
        Object char_literal29_tree=null;
        Object char_literal30_tree=null;
        Object char_literal32_tree=null;
        Object char_literal33_tree=null;
        RewriteRuleTokenStream stream_19=new RewriteRuleTokenStream(adaptor,"token 19");
        RewriteRuleTokenStream stream_16=new RewriteRuleTokenStream(adaptor,"token 16");
        RewriteRuleTokenStream stream_14=new RewriteRuleTokenStream(adaptor,"token 14");
        RewriteRuleTokenStream stream_11=new RewriteRuleTokenStream(adaptor,"token 11");
        RewriteRuleSubtreeStream stream_assignStat=new RewriteRuleSubtreeStream(adaptor,"rule assignStat");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:68:5: ( 'for' '(' first= assignStat ';' expr ';' inc= assignStat ')' block -> ^( 'for' $first expr $inc block ) )
            // /opt/workspace/test/parser/src/main/antlr3/CMinus.g:68:9: 'for' '(' first= assignStat ';' expr ';' inc= assignStat ')' block
            {
            string_literal28=(Token)match(input,19,FOLLOW_19_in_forStat391);  
            stream_19.add(string_literal28);

            char_literal29=(Token)match(input,14,FOLLOW_14_in_forStat393);  
            stream_14.add(char_literal29);

            pushFollow(FOLLOW_assignStat_in_forStat397);
            first=assignStat();

            state._fsp--;

            stream_assignStat.add(first.getTree());
            char_literal30=(Token)match(input,11,FOLLOW_11_in_forStat399);  
            stream_11.add(char_literal30);

            pushFollow(FOLLOW_expr_in_forStat401);
            expr31=expr();

            state._fsp--;

            stream_expr.add(expr31.getTree());
            char_literal32=(Token)match(input,11,FOLLOW_11_in_forStat403);  
            stream_11.add(char_literal32);
